Comments made mandatory, fixes added as mentioned by Aswin

--- a/sigmaCabs/app/views/bookings/customerFeedback.html
+++ b/sigmaCabs/app/views/bookings/customerFeedback.html
@@ -42,7 +42,7 @@
                             <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="feedback.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
                         </div>
                         <div class="fieldContainer relative" style="height:75px;">
-                            <label class="labelCompact">Comments</label>
+                            <label class="labelCompact requiredField">Comments</label>
                             <textarea data-ng-model="feedback.comments" class=""></textarea>
                         </div>
                         <p class="clear"/>
@@ -62,7 +62,7 @@
                             <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="suggestions.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
                         </div>
                         <div class="fieldContainer relative" style="height:75px;">
-                            <label class="labelCompact">Comments</label>
+                            <label class="labelCompact requiredField">Comments</label>
                             <textarea data-ng-model="suggestions.comments" class=""></textarea>
                         </div>
                         <p class="clear"/>
