--- a/sigmaCabs/app/views/dispatches/changeVehPickupLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehPickupLocation.html
@@ -25,8 +25,8 @@
                     <label class="labelCompact requiredField">New Location</label>
                     <input type="text" data-ng-class="{fieldExpand: locationFocused}" data-ng-blur="locationFocused=false" data-ng-focus="locationFocused=true" data-ng-model="changePickup.newLocation" maxlength="15" class="textFieldCompact" googleplace/>
                 </div>
-                <div class="fieldContainer  relative" style="height:75px;">
-                    <label class="labelCompact">Comments</label>
+                <div class="fieldContainer relative" style="height:75px;">
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="changePickup.comments" class="cancelBookingComment"></textarea>
                 </div>
             </fieldset>
