--- a/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
+++ b/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
@@ -31,7 +31,7 @@
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changePhone.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleChangePhoneReasonTypes"></select>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="changePhone.phoneChangeComments" class="cancelBookingComment"></textarea>
                 </div>
             </fieldset>
