--- a/sigmaCabs/app/views/dispatches/changeVehicleStatus.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleStatus.html
@@ -33,7 +33,7 @@
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vChangeStatus.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="vChangeStatus.statusComments" class="cancelBookingComment"></textarea>
                 </div>
             </fieldset>
