--- a/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
@@ -117,7 +117,7 @@ width: 115px;">{{bookingClose.tripTime}}</span>
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingClose.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleBkngCloseReasonTypes"></select>
                 </div>
                 <div class="fieldContainer fieldContainer-lg relative left margin-right10" style="height:60px;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="bookingClose.comments" class=""></textarea>
                 </div>
                 <p class="clear"/>
