--- a/sigmaCabs/app/views/dispatches/vehicleBookingComplaint.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingComplaint.html
@@ -30,7 +30,7 @@
                     <select class="validate[maxSize[36]] selectFieldCompact"></select>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="comments" class="cancelBookingComment"></textarea>
                 </div>
             </fieldset>
