--- a/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
@@ -47,7 +47,7 @@
                             <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingStart.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleReasonTypes"></select>
                         </div>
                         <div class="fieldContainer relative" style="height:75px;">
-                            <label class="labelCompact">Comments</label>
+                            <label class="labelCompact requiredField">Comments</label>
                             <textarea data-ng-model="bookingStart.comments" class="cancelBookingComment"></textarea>
                         </div>
                     </div>
