--- a/sigmaCabs/app/views/dispatches/vehicleBreakDown.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBreakDown.html
@@ -34,7 +34,7 @@
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="breakDown.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
                 </div>
                 <div class="fieldContainer relative" style="height:75px;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="breakDown.comments" class=""></textarea>
                 </div>
                 <p class="clear"/>
