--- a/sigmaCabs/app/views/dispatches/vehicleBreakStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBreakStart.html
@@ -33,7 +33,7 @@
                     <p class="clear"/>
                 </div>
                 <div class="fieldContainer relative" style="height:75px;display:none;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="breakStart.comments" class="cancelBookingComment"></textarea>
                 </div>
             </fieldset>
