--- a/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
@@ -97,7 +97,7 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-6">
-			<label title="Day Collection">Day Call</label> {{vehicleDetailsData.vehicle.dayCollection}}
+			<label title="Day Collection">Day Coll</label> {{vehicleDetailsData.vehicle.dayCollection}}
 		</div>
 		<div class="col-xs-6">
 			<label title="Total Break Time">T.Br.Tm</label> {{vehicleDetailsData.vehicle.totalBreakTime}}
