--- a/sigmaCabs/app/views/dispatches/vehicleLogout.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLogout.html
@@ -45,7 +45,7 @@
                     <input type="text" ng-model="logout.checkedBy" maxlength="20" class="textFieldCompact" alphabets-only restrict="A"/>
                 </div>
                 <div class="fieldContainer relative" style="height:60px;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="logout.comments"></textarea>
                 </div>
                 <div class="fieldContainer relative">
