--- a/sigmaCabs/app/views/bookings/bookingTariffGrid.html
+++ b/sigmaCabs/app/views/bookings/bookingTariffGrid.html
@@ -1,6 +1,6 @@
 <fieldset class="" data-ng-controller="bookingTariffGrid" style="clear:both;">
     <legend class="searchbox-border">Tariff Details</legend>
     <div style="height:65px;"  class = "bookingHistoryGrid" style="overflow: hidden;">
-    	<div class="gridStyle" ng-grid="gridBookingTariffOptions" style="height:100%;overflow:hidden;margin:0px;"></div>
+    	<div class="gridStyle" ng-grid="gridBookingTariffOptions" style="height:100%;width: 100%;overflow:hidden;margin:0px;"></div>
     </div>
 </fieldset>
