--- a/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
+++ b/sigmaCabs/app/views/dispatches/changeVehicleLocation.html
@@ -34,7 +34,7 @@
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changeLocation.reasonId" data-ng-options="obj.id as obj.reason for obj in vehicleChangeLocReasonTypes"></select>
                 </div>
                 <div class="fieldContainer relative" style="height:75px;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="changeLocation.comments" class=""></textarea>
                 </div>
             </fieldset>
