--- a/sigmaCabs/app/views/dispatches/vehicleBookingRejected.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingRejected.html
@@ -30,7 +30,7 @@
                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="vReject.priorityId" ng-options="k as v for (k,v) in vehiclePriorities"></select>
                 </div>
                 <div class="fieldContainer relative" style="height:75px;">
-                    <label class="labelCompact">Comments</label>
+                    <label class="labelCompact requiredField">Comments</label>
                     <textarea data-ng-model="vReject.comments" class=""></textarea>
                 </div>
             </fieldset>
