--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -46,7 +46,7 @@
         <span class="left margin-right10" title="Music System">MS</span>
         <span class="left margin-right10 glyphicon glyphicon-remove"></span>
 
-        <span class="left margin-right10" title="Track Device">TD</span>
+        <span class="left margin-right10" title="Tracking Device">TD</span>
         <span class="left margin-right10 glyphicon glyphicon-ok"></span>
 
         <!-- <span>{{vehicleDetails.vMusicPlayer}}</span> -->
