--- a/sigmaCabs/app/views/bookings/personalForm.html
+++ b/sigmaCabs/app/views/bookings/personalForm.html
@@ -14,13 +14,13 @@
         </div>
         <div class="fieldContainer clearBoth relative ">
             <label class="labelCompact">Caller Ph.2</label>
-            <input type="text" phone ng-model="customerDetails.altMobile"  ng-blur="fnCustomerDetailsBlured()" class="left validate[required,maxSize[128]] textFieldCompact"/>
+            <input type="text" phone maxlength="10" ng-model="customerDetails.altMobile"  ng-blur="fnCustomerDetailsBlured()" class="left validate[required,maxSize[128]] textFieldCompact"/>
             <input class="left smsCheckbox" type="checkbox" value=""  data-ng-model="sms.smsForCallerPhone2" >
         </div>
 
         <div class="fieldContainer clearBoth relative clearBoth">
             <label class="labelCompact">Search </label>
-            <input type="text" phone ng-model="searchDetails.searchString" class="left textFieldCompact" style="background: #FFFDC7" />
+            <input type="text" phone maxlength="10"  ng-model="searchDetails.searchString" class="left textFieldCompact" style="background: #FFFDC7" />
             <button class="btnCompact btn-success hide " data-ng-click="fnSearchCustomer();" style="width: 30px;margin: 0px 0px 0px 5px;">Go</button>            
             <input class="left smsCheckbox" type="checkbox" value=""  data-ng-model="sms.smsForCustPhone1" >
         </div>
@@ -31,7 +31,7 @@
         </div>
         <div class="fieldContainer clearBoth relative ">
             <label class="labelCompact">Cust. Ph.2</label>
-            <input type="text" phone ng-model="searchedCustomerDetails.altMobile" ng-blur="fnSearchedCustomerDetailsBlured()" class="left validate[required,maxSize[128]] textFieldCompact" />
+            <input type="text" phone maxlength="10" ng-model="searchedCustomerDetails.altMobile" ng-blur="fnSearchedCustomerDetailsBlured()" class="left validate[required,maxSize[128]] textFieldCompact" />
             <input class="left smsCheckbox" type="checkbox" value=""  data-ng-model="sms.smsForCustPhone2" >
         </div>
 
