--- a/sigmaCabs/app/views/bookings/bookingForm.html
+++ b/sigmaCabs/app/views/bookings/bookingForm.html
@@ -39,7 +39,7 @@
         <input type="text"  data-ng-class="{fieldExpand: dropFocused}" data-ng-blur="dropFocused = false" data-ng-focus="dropFocused = true" ng-model="bookingDetails.dropPlace" class=" validate[required,maxSize[128]] textFieldCompact" placeholder="" googleplace />
     </div>    
     <div class="fieldContainer relative right" style="width: 55%;">
-        <button class="btn-success btnCompact left">Est. KMs.</button>
+        <button class="btn-success btnCompact left" data-ng-click="fnCheckDistance();">Est. KMs.</button>
         <button class="left btnCompact btn-success left" style="border-radius: 5px;" ng-click = "checkTariff()">Tariff</button>
         <button class="btn-warning btnCompact left" style="margin: -1px 0px;" data-ng-click="fnOpenSpecialRequest();">Spl. Request</button>
     </div>
