Added reject and cancel buttons in confirm control view
Signed-off-by: Mario Ray <sigma5@sigma5-desktop.(none)>

--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -913,3 +913,7 @@ textFieldCompact[disabled] .textFieldCompact {
   top: 40%;
   left: 35%;
 }
+
+.forceLeftAlign {
+  text-align: left !important;
+}
