--- a/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
+++ b/sigmaCabs/app/views/dispatches/vehicleDetailedInfoSplitView.html
@@ -8,7 +8,12 @@
     		<button class="btnCompact btn-danger left" ng-switch-when="4" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
 
 			<button ng-switch-when="5" class="btnCompact btn-success left" data-ng-click="fnControlViewVehicleConfirm()">Confirm</button>
+
+
 			<button ng-switch-when="5" class="btnCompact btn-danger left" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
+
+			<button ng-switch-when="6" class="btnCompact btn-danger left" data-ng-click="fnControlViewVehicleRejectBooking()">Reject</button>
+			<button ng-switch-when="6" class="btnCompact btn-danger left" data-ng-click="fnControlViewVehicleCancel()">Cancel</button>
 			<button ng-switch-when="6" class="btnCompact btn-success left" data-ng-click="fnVehicleBookingStart()">Start Report</button>
 
 			<span class="clearfix"></span>
