added main tariff
Signed-off-by: Mario Ray <sigma5@sigma5-desktop.(none)>

--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -920,3 +920,19 @@ textFieldCompact[disabled] .textFieldCompact {
 .forceLeftAlign {
   text-align: left !important;
 }
+/*
+#mainTariffCityGridID .ngRow{
+  height: 22px !important;
+}
+#mainTariffCityGridID .ngCellText{
+  height: auto !important;
+  white-space: normal;
+  overflow:visible;
+}
+#mainTariffCityGridID .ngCell  {
+  display : table-cell;
+  height: auto !important;
+  overflow:visible;
+  position: static;
+}
+*/
