--- a/sigmaCabs/app/views/bookings/mainTariffDetails.html
+++ b/sigmaCabs/app/views/bookings/mainTariffDetails.html
@@ -1,14 +1,18 @@
 
-<fieldset style="width: 380px;float: left; margin: 0px 5px;height: 480px;">
+<fieldset style="width: 360px;float: left; margin: 0px 5px;height: 350px;">
 	<legend>City Tariff</legend>
-	<div class="gridStyle" ng-grid="mainTariffCityGrid" style="margin:0px;height: 420px;"></div>
+	<div class="gridStyle" ng-grid="mainTariffCityGrid" style="margin:0px;height: 300px;" id="mainTariffCityGridID"></div>
 </fieldset>
-
-<fieldset style="width: 380px;float: left; margin: 0px 5px;height: 170px;">
+<fieldset style="width: 360px;float: left; margin: 0px 5px;height: 350px;">
+	<legend>City Tariff</legend>
+	<div class="gridStyle" ng-grid="mainTariffCityGrid" style="margin:0px;height: 300px;" id="mainTariffCityGridID"></div>
+</fieldset>
+<p class="clear"/>
+<fieldset style="width: 360px;float: left; margin: 0px 5px;height: 210px;">
 	<legend>Airport Tariff</legend>
-	<div class="gridStyle" ng-grid="mainTariffAirportGrid" style="margin:0px;height: 120px;"></div>
+	<div class="gridStyle" ng-grid="mainTariffAirportGrid" style="margin:0px;height: 145px;"></div>
 </fieldset>
-<fieldset style="width: 380px;float: left; margin: 0px 5px;height: 170px;">
+<fieldset style="width: 360px;float: left; margin: 0px 5px;height: 210px;">
 	<legend>Outstation Tariff</legend>
-	<div class="gridStyle" ng-grid="mainTariffOutstationGrid" style="margin:0px;height: 120px;"></div>
+	<div class="gridStyle" ng-grid="mainTariffOutstationGrid" style="margin:0px;height: 170px;"></div>
 </fieldset>
