--- a/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleLoginForm.html
@@ -37,7 +37,7 @@
     </div>
     <div class="fieldContainer relative left" style="width:180px;">
         <label class="labelCompact" title="Expected Login Hours">E. LiH</label>
-        <select class="selectFieldCompact" data-ng-model="vehicleMainDetails.expLoginHours" ng-options='k as v for (k,v) in hours'></select>
+        <select class="selectFieldCompact" data-ng-model="vehicleMainDetails.expLoginHours" ng-options='k as v for (k,v) in loginHours'></select>
     </div>
     <div class="fieldContainer relative right" style="width:180px;">
         <span class="left margin-right10" title="Carrier">C</span>
